<resources>
    <string name="app_name">Movie Ku</string>
    <string name="now_showing">Now Showing</string>
    <string name="popular">Popular</string>
    <string name="app_title">Movies</string>
    <string name="error_message">Something went wrong. try again</string>
    <string name="load_content">Load content</string>
    <string name="hint_email">Input email</string>
    <string name="hint_password">Input password</string>
    <string name="login">Login</string>
    <string name="no_account">Didn\'t have account yet?</string>
    <string name="register">Register</string>
    <string name="hint_password_confirm">Re-Input password</string>
    <string name="hint_username">Input username</string>
    <string name="error_empty_field">The fields cannot be empty</string>
    <string name="profile">Profile</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_address">Address</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">are you sure you want to log out?</string>
    <string name="no_update">Nothing to update</string>
    <string name="desc_back_icon">Navigate back icon</string>
    <string name="visit_site">Visit site</string>
    <string name="overview_title">Overview</string>
    <string name="genres_title">Genres</string>
    <string name="hint_username_profile">Username</string>
    <string name="success_login">Login was successful</string>
    <string name="error_password_length">Password must be at least 6 characters</string>
    <string name="error_password_not_match">passwords do not match</string>
    <string name="error_password">Please check your password</string>
    <string name="success_register">registration was successful</string>
    <string name="greeting">Hello %1$s</string>
    <string name="login_failed_try_again">Login failed, try again</string>
    <string name="register_failed_try_again">Register failed, try again!</string>
    <string name="logout_failed_try_again">Logout failed, try again!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="image_source_title">Image source</string>
    <string name="image_source_description">Select the image source</string>
    <string name="saving_data">Saving data…</string>
    <string name="save_data_failed_try_again">Save data failed, try again!</string>
    <string name="clean_worker_notify_message">Cleaning up old temporary files</string>
    <string name="blur_worker_notify_blurring_image">Blurring image</string>
    <string name="upload_worker_notify_message">Uploading photo profile</string>
    <string name="are_you_sure_to_cancel_updating_photo">Are you sure to cancel updating photo?</string>
    <string name="cancel_upload">Cancel upload</string>
    <string name="updating_image">Updating image…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorite_movies_title">Favorite Movies</string>
    <string name="wait_loading_the_data">Wait, loading the data</string>
    <string name="add_movies_to_favorite">Add movies to favorite</string>
    <string name="error_illustration">Error Illustration</string>
    <string name="icon_to_navigate_to_favorite_screen">Icon to navigate to favorite screen</string>
    <string name="cancle_the_update_progress">Cancle the update progress</string>
    <string name="thumbnail_of_movie">Thumbnail of movie</string>
    <string name="update_name_title">Update Name</string>
    <string name="name_label">Name</string>
    <string name="update_address_title">Update Address</string>
    <string name="address_label">Address</string>
    <string name="update_username_title">Update Username</string>
    <string name="username_label">Username</string>
    <string name="birthday_label">Birthday</string>
    <string name="icon_edit">Icon edit</string>
    <string name="icon_back">Icon back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="finish">Finish</string>
</resources>