<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="24dp"
    android:paddingBottom="24dp"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/iv_navigate_back"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:contentDescription="@string/icon_back"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_page_title"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/small_padding_margin"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/profile"
        android:textSize="@dimen/large_font"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_navigate_back"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/small_padding_margin"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_page_title"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
        tools:src="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/siv_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_circle_button"
        android:elevation="1dp"
        android:padding="8dp"
        android:src="@drawable/ic_photo_camera"
        app:layout_constraintBottom_toBottomOf="@+id/siv_profile"
        app:layout_constraintEnd_toEndOf="@+id/siv_profile"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/siv_profile"
        app:layout_constraintTop_toTopOf="@+id/siv_profile"
        app:layout_constraintVertical_bias="0.90999997" />

    <LinearLayout
        android:id="@+id/ll_upload_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/siv_profile"
        app:layout_constraintStart_toStartOf="@+id/siv_profile"
        app:layout_constraintTop_toBottomOf="@+id/siv_profile">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/lpi_upload_progress"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="5"
            android:indeterminate="true"
            android:progress="0"
            android:progressTint="?attr/colorPrimary" />

        <ImageView
            android:id="@+id/iv_cancle_progress"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/cancle_the_update_progress"
            android:src="@drawable/ic_close_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_desc_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updating_image"
        android:textSize="11sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ll_upload_progress"
        app:layout_constraintStart_toStartOf="@+id/ll_upload_progress"
        app:layout_constraintTop_toBottomOf="@+id/ll_upload_progress" />

    <TextView
        android:id="@+id/tv_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siv_profile" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TitleTextView_16_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_label_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_name"
        tools:text="Beranju Sihombing" />

    <ImageView
        android:id="@+id/iv_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_edit"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_label_name" />

    <TextView
        android:id="@+id/tv_label_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding_margin"
        android:text="@string/username_label"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TitleTextView_16_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_label_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_username"
        tools:text="Beranju" />

    <ImageView
        android:id="@+id/iv_edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_edit"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_label_username" />

    <TextView
        android:id="@+id/tv_label_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding_margin"
        android:text="@string/birthday_label"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_birthday"
        style="@style/TitleTextView_16_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_label_birthday"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_birthday"
        tools:text="22-02-200" />

    <ImageView
        android:id="@+id/iv_pick_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_edit"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_label_birthday" />

    <TextView
        android:id="@+id/tv_label_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding_margin"
        android:text="@string/address_label"
        app:layout_constraintStart_toStartOf="@+id/tv_birthday"
        app:layout_constraintTop_toBottomOf="@+id/tv_birthday" />

    <TextView
        android:id="@+id/tv_address"
        style="@style/TitleTextView_16_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_label_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_address"
        tools:text="Medan" />

    <ImageView
        android:id="@+id/iv_edit_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_edit"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_label_address" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="?attr/colorSurfaceVariant"
        android:text="@string/logout"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_address"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Small" />


    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:background="@drawable/bg_rounded_10"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/lpi_loading"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:indeterminate="true"
            android:progress="0"
            android:progressTint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/tv_message_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="Compress the image" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>