<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        style="@style/TitleTextView_18_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Update profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_padding_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/large_padding_margin"
        android:hint="@string/hint_username_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="50"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_padding_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/large_padding_margin"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_value"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Small" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_padding_margin"
        android:layout_marginEnd="24dp"
        android:backgroundTint="?attr/colorSurface"
        android:text="@string/cancel"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@+id/btn_update"
        app:layout_constraintEnd_toStartOf="@+id/btn_update"
        app:layout_constraintTop_toTopOf="@+id/btn_update"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Small" />

</androidx.constraintlayout.widget.ConstraintLayout>